--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -133,6 +133,12 @@
               <span class="checkmark"></span>
             </label>
           </div>
+          <div class="m1" v-if="entity.rechnung.auftrag">
+            <label for="rechnungEditForm_auftrag">Auftrag</label>
+            <button class="auftrag btnSmall" title="Auftrag suchen" @click="showAuftragDialog = true"></button>
+            <button class="delete btnSmall" title="Auftrag deselektieren" @click="entity.rechnung.auftrag = {}"></button>
+            <textarea class="m1" id="rechnungEditForm_auftrag" readonly v-model="entity.rechnung.auftrag.beschreibung"></textarea>
+          </div>
           <div class="m1" v-if="entity.rechnung.reparatur">
             <label for="rechnungEditForm_reparatur">Reparaturauftrag</label>
             <button class="zahnrad btnSmall" title="Reparaturauftrag suchen" @click="showReparaturDialog = true"></button>
@@ -169,6 +175,12 @@
         @close="showKundeDialog = false"
         @saved="handleKundeResponse"
       ></kunde-suchen-dialog>
+      <auftrag-suchen-dialog
+        :kunde="entity.rechnung.kunde"
+        v-if="showAuftragDialog"
+        @close="showAuftragDialog = false"
+        @saved="handleAuftragResponse"
+      ></auftrag-suchen-dialog>
       <reparatur-suchen-dialog
         :kunde="entity.rechnung.kunde"
         v-if="showReparaturDialog"
@@ -195,6 +207,7 @@
   <script src="/scripts/header.component.js"></script>
   <script src="/scripts/grid.component.js"></script>
   <script src="/scripts/zeichenzaehler.component.js"></script>
+  <script src="/scripts/auftrag/auftrag.suchen.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
