--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Rechnung drucken - Computer-Insel Tools by Sita Geßner</title>
-    <link rel="icon" href="/themes/icons/zahnrad.png">
+    <link rel="icon" href="/themes/icons/rechnung.png">
     <link rel="stylesheet" href="/themes/css/rechnung.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
