Anzeigefehler des Endpreises von Rechnungen bei mehr als 999,99 EUR behoben

--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -117,7 +117,7 @@
           </table>
           <div class="m6 right">
             <label for="rechnungEditForm_endpreis">Endpreis</label>
-            <input class="m6" readonly type="number" v-model="endpreis" />
+            <input class="m6" readonly type="text" v-model="endpreis" />
           </div>
         </div>
         <div class="form m1">
