--- a/src/main/resources/public/auftrag-uebersicht.html
+++ b/src/main/resources/public/auftrag-uebersicht.html
@@ -26,6 +26,11 @@
               <label for="searchForm_kundennummer">Kd.-Nr.</label>
               <input class="m6" id="searchForm_kundennummer" type="text" v-model="grid.searchQuery.kundennummer"></input>
             </div>
+            <div class="m2">
+              <label for="searchForm_suchfeld_name">Kunde</label>
+              <input class="m2" id="searchForm_suchfeld_name" title="Ermöglicht die Suche nach Firmenname, Vorname oder Nachname"
+                type="text" v-model="grid.searchQuery.suchfeld_name"></input>
+            </div>
           </div>
           <div class="m1">
             <label for="searchForm_beschreibung">Beschreibung</label>
