--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -19,18 +19,11 @@
       <page-header :marker="'Kunden'"></page-header>
       <div id="content">
         <div class="form m1">
-          <div class="m2m">
-            <label for="searchForm_firmenname">Firmenname</label>
-            <input class="m2" id="searchForm_firmenname" type="text" v-model="grid.searchQuery.firmenname"></input>
-          </div>
           <div class="m1">
             <div class="m2m">
-              <label for="searchForm_nachname">Nachname</label>
-              <input class="m2" id="searchForm_nachname" type="text" v-model="grid.searchQuery.nachname"></input>
-            </div>
-            <div class="m3m">
-              <label for="searchForm_vorname">Vorname</label>
-              <input class="m3" id="searchForm_vorname" type="text" v-model="grid.searchQuery.vorname"></input>
+              <label for="searchForm_suchfeld_name">Name</label>
+              <input class="m2" id="searchForm_suchfeld_name"
+                title="Ermöglicht die Suche nach Firmenname, Vorname oder Nachname" type="text" v-model="grid.searchQuery.suchfeld_name"></input>
             </div>
             <div class="m6">
               <label for="searchForm_plz">PLZ</label>
@@ -44,7 +37,7 @@
             </div>
           </div>
         </div>
-        <div style="height: 200px;"></div>
+        <div style="height: 150px;"></div>
         <div id="gridDiv" v-if="grid.gridColumns.length > 0">
           <grid
             :actions="grid.actions"
