Nummerierung bei Aufträgen ergänzt

--- a/src/main/resources/public/auftrag-drucken.html
+++ b/src/main/resources/public/auftrag-drucken.html
@@ -37,7 +37,11 @@
         </div>
         <hr class="header">
       </header>
+      <br>
+      <br>
       <div class="center font30">Verbindliche Bestellung</div>
+      <div class="font15">Auftragsnummer: {{entity.filiale.kuerzel}}{{entity.nummer}}</div>
+      <br>
       <table class="font16">
         <tbody>
           <tr>
