Korrektur Dokumentation zum Exportieren von Rechnungen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -238,8 +238,10 @@
       Das Recht <em>RECHNUNG_EXPORT</em> wird benötigt, um die Exportieren-Schaltfläche zu aktivieren.</p>
     <p>Auf dieser Seite muss der Monat und das Jahr gewählt werden.
       Es wird immer der aktuelle Monat und das aktuelle Jahr vorgeblendet.</p>
-    <p>Nach dem Klick auf die Exportieren-Schaltfläche werden alle Rechnungen mit dem Rechnungsdatum im gewählten Monat/Jahr exportiert.
-      Dabei wird je Zahlart eine eigene Datei erzeugt und in das Ablageverzeichnis gewählt.</p>
+    <p>Nach dem Klick auf die Exportieren-Schaltfläche werden alle Rechnungen mit dem Rechnungsdatum im gewählten Monat/Jahr exportiert.</p>
+    <p>Zusätzlich werden alle Posten aus den Kassenbüchern des Monats exportiert, welche nicht identisch mit einer Rechnungsnummer in dem Monat sind.
+      Aus diesem Grund ist es notwendig, mehrfach vorhandene Kassenbucheinträge für einen Tag zu löschen, sodass je Tag nur ein Eintrag vorhanden ist.
+    </p>
     <p>Das Dateiformat ist hierbei TXT und besitzt ein fest definiertes Muster.</p>
     <p>Die Konten werden aus den zur Rechnungen hinterlegten Filialen ermittelt.</p>
     <p>Die Konten können in den Einstellung angepasst werden.</p>
