--- a/src/main/resources/public/angebot.html
+++ b/src/main/resources/public/angebot.html
@@ -86,7 +86,7 @@
       </div>
       <messages-box v-bind:text="result" v-if="showDialog" @close="showDialog = false"></messages-box>
       <kunde-suchen-dialog
-        :kunde="entity.kunde"
+        :kunde="entity.angebot.kunde"
         v-if="showKundeDialog"
         @close="showKundeDialog = false"
         @saved="handleKundeResponse"
