Suchfeld Telefon hinzugefügt

--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -25,9 +25,13 @@
               <input class="m2" id="searchForm_suchfeld_name"
                 title="Ermöglicht die Suche nach Firmenname, Vorname oder Nachname" type="text" v-model="grid.searchQuery.suchfeld_name"></input>
             </div>
-            <div class="m6">
+            <div class="m6m">
               <label for="searchForm_plz">PLZ</label>
               <input class="m6" id="searchForm_plz" type="text" v-model="grid.searchQuery.plz"></input>
+            </div>
+            <div class="m3">
+              <label for="searchForm_telefon">Telefon</label>
+              <input class="m3" id="searchForm_telefon" type="text" v-model="grid.searchQuery.telefon"></input>
             </div>
           </div>
           <div class="m1">
