Angebots- und Auftragsnummer erweitert und mit Minus
Die Nummer darf nicht eindeutig mit der Rechnungsnummer sein, darum soll bei Angeboten ein A und bei Aufträgen ein B (für Bestellung) hinzugefügt werden

--- a/src/main/resources/public/angebot-drucken.html
+++ b/src/main/resources/public/angebot-drucken.html
@@ -48,7 +48,7 @@
       </div>
       </header>
       <div class="center font30">Angebot</div>
-      <div class="font15">Angebotsnummer: {{entity.angebot.filiale.kuerzel}}{{entity.angebot.nummer}}</div>
+      <div class="font15">Angebotsnummer: {{entity.angebot.filiale.kuerzel}}{{entity.nummerAnzeige}}</div>
       <br>
       <br>
       <table>
