--- a/src/main/resources/public/auftrag-drucken.html
+++ b/src/main/resources/public/auftrag-drucken.html
@@ -40,7 +40,7 @@
       <br>
       <br>
       <div class="center font30">Verbindliche Bestellung</div>
-      <div class="font15">Auftragsnummer: {{entity.filiale.kuerzel}}{{entity.nummer}}</div>
+      <div class="font15">Auftragsnummer: {{entity.filiale.kuerzel}}{{entity.nummerAnzeige}}</div>
       <br>
       <table class="font16">
         <tbody>
