--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -87,7 +87,7 @@
           <li><a href="#statistiken">Statistiken</a></li>
         </ul>
       </li>
-      <li><a href="#bestellung">Bestellung</a></li>
+      <li><a href="#einkauf">Einkauf</a></li>
       <li>
         <a href="#einstellungen">Einstellungen</a>
         <ul>
@@ -140,7 +140,7 @@
       <li>Kassenstand berechnen</li>
       <li>Statistiken erstellen</li>
       <li>Inventar verwalten</li>
-      <li>Bestellungen aufgeben</li>
+      <li>Einkäufe tätigen</li>
     </ul>
     <p>Um allgemein auf die Tools zugreifen zu können wird ein gültiger Login benötigt.
       Die verschiedenen Seiten und Funktionen sind durch Berechtigungen, die den Mitarbeitern zugeteilt werden müssen, abgesichert.
@@ -408,10 +408,10 @@
       Diese wird ebenfalls in das Ablageverzeichnis gelegt und zeigt die Rechnungsnummer, die Kundenanschrift und Telefonnummer, sowie den Rechnungsbetrag.
       Das Feld <em>Posten</em> wird dabei nicht berücksichtigt.
     </p>
-    <h2 id="bestellung">Bestellung</h2>
-    <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_BESTELLUNG</em> benötigt.</p>
-    <p>Bei jeder Rechnung die geschrieben wird, werden die verkauften Produkte aus dem Inventar vorgemerkt und mit Anzahl, EAN und Produktbezeichnung vorgeblendet. Diese Liste kann genutzt werden um die Produkte zur Bestellung hinzuzufügen.</p>
-    <p>Die Bestelliste wird angezeigt und kann bearbeitet und gespeichert werden. Die zum Mitarbeiter hinterlegte Filiale ist ausschlaggebend, welche Bestellliste geladen und bearbeitet wird. Dabei wird der Ortsname der Filiale als Dateiname verwendet.</p>
+    <h2 id="einkauf">Einkauf</h2>
+    <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_EINKAUF</em> benötigt.</p>
+    <p>Bei jeder Rechnung die geschrieben wird, werden die verkauften Produkte aus dem Inventar vorgemerkt und mit Anzahl, EAN und Produktbezeichnung vorgeblendet. Diese Liste kann genutzt werden um die Produkte zur Einkaufsliste hinzuzufügen.</p>
+    <p>Die Einkaufsliste wird angezeigt und kann bearbeitet und gespeichert werden. Die zum Mitarbeiter hinterlegte Filiale ist ausschlaggebend, welche Einkaufsliste geladen und bearbeitet wird. Dabei wird der Ortsname der Filiale als Dateiname verwendet.</p>
     <h2 id="einstellungen">Einstellungen</h2>
     <p>Die Seite Kassenbuch unterteilt sich in die drei Unterseiten <strong>Allgemein</strong>, <strong>Filiale</strong> und <strong>Mitarbeiter</strong>.</p>
     <h3 id="allgemein">Allgemein</h3>
@@ -512,7 +512,7 @@
       <li><strong>RECHNUNG_VERWALTEN</strong> - Rechnungen dürfen angelegt, bearbeitet oder gelöscht werden</li>
       <li><strong>ZUGRIFF_RECHNUNG_EXPORT</strong> - Zugriff auf die Seite Übersicht Export (Rechnungen)</li>
       <li><strong>RECHNUNG_EXPORT</strong> - Rechnungen können exportiert werden</li>
-      <li><strong>ZUGRIFF_BESTELLUNG</strong> - Zugriff auf die Seite: Bestellung</li>
+      <li><strong>ZUGRIFF_EINKAUF</strong> - Zugriff auf die Seite: Einkauf</li>
       <li><strong>KUNDEN_AUFTRAEGE</strong> - Ermöglicht das Anzeigen aller Aufträge eines Kunden</li>
       <li><strong>ZUGRIFF<em>AUFTRAG</em>ERSTELLEN</strong> - Zugriff auf die Seite Aufträge erstellen</li>
       <li><strong>ZUGRIFF<em>AUFTRAG</em>UEBERSICHT</strong> - Zugriff auf die Seite Übersicht Aufträge</li>
